
package com.iluwatar.serviceadapter;

import javax.jws.WebMethod;
import javax.jws.WebParam;
import javax.jws.WebResult;
import javax.jws.WebService;
import javax.xml.bind.annotation.XmlSeeAlso;
import javax.xml.ws.RequestWrapper;
import javax.xml.ws.ResponseWrapper;


/**
 * This class was generated by the JAX-WS RI.
 * JAX-WS RI 2.3.2
 * Generated source version: 2.2
 * 
 */
@WebService(name = "SOAPDemoSoap", targetNamespace = "http://tempuri.org")
@XmlSeeAlso({
    ObjectFactory.class
})
public interface SOAPDemoSoap {


    /**
     * 
     * @param arg2
     * @param arg1
     * @return
     *     returns long
     */
    @WebMethod(operationName = "DivideInteger", action = "http://tempuri.org/SOAP.Demo.DivideInteger")
    @WebResult(name = "DivideIntegerResult", targetNamespace = "http://tempuri.org")
    @RequestWrapper(localName = "DivideInteger", targetNamespace = "http://tempuri.org", className = "com.iluwatar.serviceadapter.DivideInteger")
    @ResponseWrapper(localName = "DivideIntegerResponse", targetNamespace = "http://tempuri.org", className = "com.iluwatar.serviceadapter.DivideIntegerResponse")
    public long divideInteger(
        @WebParam(name = "Arg1", targetNamespace = "http://tempuri.org")
        Long arg1,
        @WebParam(name = "Arg2", targetNamespace = "http://tempuri.org")
        Long arg2);

}
